--- a/less/header.less
+++ b/less/header.less
@@ -16,23 +16,29 @@ header{
   .headerFlexHold{
     display: flex;
     flex-direction: row-reverse;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: center;
     width: 100%;
+
+    @media only screen and (max-width: 500px){
+      justify-content: space-around;
+    }
 
 
     img{
       height: 6rem;
-      
+
       @media only screen and (max-width: 500px){
         height: 3rem;
       }
     }
 
     nav{
-      width: 60%;
+      width: 30%;
       display: flex;
       justify-content: flex-end;
+      justify-content: space-around;
+
 
       a{
         text-decoration: none;
